--- a/Part 2/style.css
+++ b/Part 2/style.css
@@ -1,43 +1,70 @@
 header {
 
+display:flex;
+flex-direction: row;
 
 }
 
 
 h2 {
-
+padding-right: 200px;
+padding-left: 200px;
+border-style: solid;
+border-width: 3px;
 }
 
 .nav {
 
+display: flex;
+flex-direction: row;
 
   }
 
   li {
-
+ list-style-type: none;
+padding-left: 50px;
+padding-right :50px;
+margin-right: 150px;
+border-style: solid;
+border-width: 2px;
 
   }
 
   .content{
+  display: flex;
+  flex-direction: row;
+  border-style: solid;
+border-width: 2px;
 
 }
 
   .aside {
-
+border-style: solid;
+border-width: 2px;
+padding-right: 50px;
+padding-left:50px;
   }
 
   .slidebox{
-
+border-style: solid;
+border-width: 2px;
+padding-right: 100px;
+padding-left: 100px;
+text-align: center;
    
   }
 
   .article{
-
+border-style: solid;
+border-width: 2px;
+display: flex;
+flex-direction: row;
   }
 
 
 .poem{
-
+border-style: solid;
+border-width: 2px;
 }
 
 
